--- a/shadowsocks-config.json
+++ b/shadowsocks-config.json
@@ -9,5 +9,6 @@
   "local_port": 1080,
   "password": "PASS",
   "timeout": 60,
-  "method": "chacha20-ietf-poly1305"
+  "method": "aes-256-gcm",
+  "nameserver": "8.8.8.8"
 }
